<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tVEncuesta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvEncuestas"
        android:textColor="#6200EE"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:hint="@string/eTNombre"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tVEncuesta" />

    <Switch
        android:id="@+id/swAnonimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="@string/swAnonimo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eTNombre" />

    <TextView
        android:id="@+id/tVSOpertivo"
        android:layout_width="225dp"
        android:layout_height="21dp"
        android:text="@string/tVOperativo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swAnonimo" />

    <RadioGroup
        android:id="@+id/radioGroupSO"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tVSOpertivo">

        <RadioButton
            android:id="@+id/rbMac"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/rcMac" />

        <RadioButton
            android:id="@+id/rbWindows"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/rbWindows" />

        <RadioButton
            android:id="@+id/rbLinux"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/rbLinux" />
    </RadioGroup>

    <TextView
        android:id="@+id/tVEspecialidad"
        android:layout_width="112dp"
        android:layout_height="20dp"
        android:text="@string/tVEspecialidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSO" />

    <CheckBox
        android:id="@+id/ckDam"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:text="@string/ckDam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tVEspecialidad" />

    <CheckBox
        android:id="@+id/ckAsir"
        android:layout_width="70dp"
        android:layout_height="49dp"
        android:text="@string/ckAsir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ckDam" />

    <CheckBox
        android:id="@+id/ckDaw"
        android:layout_width="69dp"
        android:layout_height="48dp"
        android:text="@string/ckDaw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ckAsir" />

    <TextView
        android:id="@+id/tvHorasEstudio"
        android:layout_width="111dp"
        android:layout_height="19dp"
        android:text="@string/tvHorasEstudio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ckDaw" />

    <SeekBar
        android:id="@+id/sbHoras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="10"
        android:progress="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHorasEstudio" />

    <Button
        android:id="@+id/btValidar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btValidar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sbHoras" />

    <Button
        android:id="@+id/btReiniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btReiniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btValidar" />

    <Button
        android:id="@+id/btCuantas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btCuantas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btReiniciar" />

    <Button
        android:id="@+id/btResumen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btResumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btCuantas" />

    <TextView
        android:id="@+id/textViewResumen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/btResumen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>